# prometheus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  makefile
.circleci/: config.yml
assets/models/drone/: drone.mtl  source_attribution.txt
assets/textures/scifi_wall/: source_attribution.txt
assets/textures/tile_floor/: source_attribution.txt
config/: display.toml
docker/arch/: Dockerfile
docker/archlinux/: Dockerfile
docker/firefox/archlinux/: Dockerfile
docker/firefox/ubuntu/: Dockerfile
docker/ubuntu/: Dockerfile
include/: bounded_buffer.hpp  camera.hpp  com_port.hpp  drone_viewer.hpp  fps_counter.hpp  glfw_manager.hpp  imgui_manager.hpp  opengl_manager.hpp  printer.hpp  resource_manager.hpp  shader.hpp  shared.hpp  telemetry_manager.hpp  vertex_data.hpp  viewer_mode.hpp
include/data/: shared.hpp
include/drivers/: com_port.hpp  linux_serial_port.hpp  serial_port.hpp  windows_serial_port.hpp
include/managers/: glfw_manager.hpp  graphics_manager.hpp  imgui_manager.hpp  opengl_manager.hpp  telemetry_manager.hpp  timer_manager.hpp  ui_manager.hpp  window_manager.hpp
include/misc/: callbacks.hpp  camera.hpp  com_port.hpp  drone_viewer.hpp  linux_serial_port.hpp  logger.hpp  mesh.hpp  model.hpp  quad.hpp  serial_port.hpp  shader.hpp  shapes.hpp  utility.hpp  windows_serial_port.hpp
include/models/: lights.hpp  mesh.hpp  model.hpp  room.hpp
src/: com_port.cpp  linux_serial_port.cpp  main.cpp  prometheus.cpp  serial_port.cpp  shader.cpp  triangle.cpp
src/drivers/: com_port.cpp  linux_serial_port.cpp  serial_port.cpp  windows_serial_port.cpp
src/shaders/: main.fs  main.vs  point_light.fs  point_light.vs  quad.fs  quad.vs  shader.fs  shader.vs  shadow.vs
test/hardware/: arduino_ground_station.ino
test/hardware/arduino_ground_station/: arduino_ground_station.ino
